--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ body{
 .hero-section {
     height: 80vh;
     width: 100%;
-    background-image: url("../images/watch-bg.jpg");
+    background-image: url("watch-bg.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
